--- a/0/g/index.html
+++ b/0/g/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>𝗚𝗔𝗠𝗘𝗦 | nate-games</title>
+  <title>GAMES | Quack-Math</title>
   <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
   <link rel="stylesheet" href="../assets/css/games.css" />
 </head>
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <button class="menu-item" onclick="window.location.href='../../index.html'">𝗡𝗮𝘁𝗲-𝗴𝗮𝗺𝗲𝘀</button>
+      <button class="menu-item" onclick="window.location.href='../../index.html'">QUack-Math</button>
     </div>
     <nav class="menu">
       <button class="menu-item" onclick="window.location.href='./index.html'">Games</button>
